add mock tests